--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal website template, built with Eleventy.",
   "main": "index.js",
   "dependencies": {},
-  "devDependencies": {
+  "peerDependencies": {
     "@11ty/eleventy": "^0.8.0"
   },
   "scripts": {
@@ -22,4 +22,3 @@
   },
   "homepage": "https://github.com/alwayslivid/eleventy-about-me#readme"
 }
-
