--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Personal website template, built with Eleventy.",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "clean-css": "^4.2.1"
+  },
   "peerDependencies": {
     "@11ty/eleventy": "^0.8.0"
   },
